<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Spinner
        android:id="@+id/SpinnerDesignation_id"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@android:color/holo_blue_dark"
        android:entries="@array/userdesignation"
        android:popupBackground="@android:color/holo_purple" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="340dp"
        android:layout_height="319dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerDesignation_id"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstName_id"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:hint="@string/Firstname"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/LastName_id"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:hint="@string/LName"
                android:inputType="text"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />


        </LinearLayout>

        <EditText
            android:id="@+id/Address_id"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:hint="@string/address"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/SpinnerProvince_id"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@android:color/holo_orange_light"
            android:entries="@array/provincelist"
            android:popupBackground="@android:color/holo_purple" />

        <EditText
            android:id="@+id/country_id"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:hint="@string/Country"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/postalcode_id"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:hint="@string/Postalcode"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm_id"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="110dp"

        android:background="@color/colorPrimaryDark"
        android:text="CONFIRM"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>